# am-vcv

./: .envrc  .gitignore  Cargo.toml  Readme.md  devenv.nix  devenv.yaml  pyproject.toml
AmB-Tonnetz/: Makefile  out.txt  plugin.json
AmB-Tonnetz/res/: ammbeen3_data.json
AmB-Tonnetz/src/: AmB-Tonnetz.cpp  BaconModule.hpp  BaconModuleWidget.h  BaconTestModule.cpp  BufferedDrawFunction.hpp  GraduatedFader.hpp  RGBLinearInterpolator.cpp  RGBLinearInterpolator.hpp  SizeTable.hpp  Style.cpp  Style.hpp  chord.cpp  chord.hpp  colorconvert.h  pitch.cpp  pitch.hpp  plugin.cpp  plugin.hpp  tps.cpp  tps.hpp
AmB-Tonnetz/testBin.dSYM/Contents/: Info.plist
sdk/Rack-SDK/: helper.py
tambura/: Makefile  plugin.json  tambura.dsp
tambura/src/: FaustModule.cpp
