[tool.poetry]
name = "am-vcv"
version = "0.1.0"
description = ""
authors = ["o1lo01ol1o <tim.pierson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
music21 = "^9.1.0"
jupyter = "^1.0.0"
fretboard = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
